Bug 452068 - kmymoney complains about "GPG no secure keyring found"
Summary: kmymoney complains about "GPG no secure keyring found"
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.2
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-30 07:33 UTC by Ralf Habacker
Modified: 2022-03-30 12:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2022-03-30 07:33:03 UTC
STEPS TO REPRODUCE
1. download portable package for kmymoney from https://kmymoney.org/snapshots.php#kmymoney5-aq6
2. unpack archive 
3. open a command line in the bin dir folder
4. if no gpg key are present, from the bin dir of the unpackaged archive run `gpg2 --generate-key` to generate a gpg key
5. start kmymoney.exe
6. open settings->plugins->xml->configuration
7. enable gpg support
8. restart kmymoney

OBSERVED RESULT
In the debug log the message 'GPG no secure keyring found' will be shown

EXPECTED RESULT
The message should not be shown

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version:  5.65.0
Qt Version: 5.11
gpg (GnuPG): 2.2.27

ADDITIONAL INFORMATION
https://www.gnupg.org/documentation/manuals/gnupg/GPG-Configuration.html states about the mentioned file

 > /.gnupg/secring.gpg
>    The legacy secret keyring as used by GnuPG versions before 2.1. It is not used by GnuPG 2.1 and later. You may want to keep it in case you have to use GnuPG 1.4 to decrypt archived data.
Comment 1 Thomas Baumgart 2022-03-30 12:34:18 UTC
Git commit 7ed36be3545cdb536d96319d8c36c2b5c83eeca1 by Thomas Baumgart.
Committed on 30/03/2022 at 12:32.
Pushed by tbaumgart into branch 'master'.

Prevent false debug message about missing secret keys

Newer GPG versions use a different location for keys than older ones.
This change prevents to display a false message about missing secret
keys when only the new location is used.

M  +11   -4    kmymoney/plugins/xml/libkgpgfile/kgpgfile.cpp

https://invent.kde.org/office/kmymoney/commit/7ed36be3545cdb536d96319d8c36c2b5c83eeca1
Comment 2 Thomas Baumgart 2022-03-30 12:34:30 UTC
Git commit 64ae6469320a52da5df382d11d9826b861891fe4 by Thomas Baumgart.
Committed on 30/03/2022 at 12:33.
Pushed by tbaumgart into branch '5.1'.

Prevent false debug message about missing secret keys

Newer GPG versions use a different location for keys than older ones.
This change prevents to display a false message about missing secret
keys when only the new location is used.
FIXED-IN: 5.1.3

(cherry picked from commit 7ed36be3545cdb536d96319d8c36c2b5c83eeca1)

M  +11   -4    kmymoney/plugins/xml/libkgpgfile/kgpgfile.cpp

https://invent.kde.org/office/kmymoney/commit/64ae6469320a52da5df382d11d9826b861891fe4