Prevent false debug message about missing secret keys

Newer GPG versions use a different location for keys than older ones.
This change prevents to display a false message about missing secret
keys when only the new location is used.

BUG: 452068
FIXED-IN: 5.1.3

(cherry picked from commit 7ed36be3545cdb536d96319d8c36c2b5c83eeca1)